--- a/.github/workflows/NodeCI.yml
+++ b/.github/workflows/NodeCI.yml
@@ -24,7 +24,7 @@ jobs :
         with : 
           node-version : ${{ matrix.node-version }}
       - run : npm install
-      - run : npm run build
+#     - run : npm run build # 必要になったらコメントアウトを外す
       - run : npm test
         env : 
           CI : true
